--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -47,17 +47,18 @@ diskimages:
 providers:
   - name: local_01
 #TODO: Update the provider username, password, and authurl
-    username: '<%= provider_username %>'
-    password: '<%= provider_password %>'
-    auth-url: 'http://<openstack cloud>:5000/v2.0'
-    project-name: 'admin'
-    max-servers: 2
+    username: 'peregrine'
+    password: 'password'
+    auth-url: 'http://10.214.178.11:5000/v2.0'
+    project-name: 'CI'
+    max-servers: 3
     images:
       - name: dpc
         min-ram: 8192
         diskimage: dpc
         username: jenkins
         private-key: '/home/nodepool/.ssh/id_rsa'
+        #private-key: '/etc/nodepool/id_rsa'
 
 targets:
   - name: jenkins1
