--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -36,7 +36,7 @@ diskimages:
         - ubuntu
         - vm
         - openstack-repos
-        - puppet
+        #- puppet
         - nodepool-base
         - cache-devstack
       release: trusty
