--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -38,6 +38,7 @@ diskimages:
         - openstack-repos
         - nodepool-base
         - cache-devstack
+        - initialize-urandom
         - growroot
         - infra-package-needs
         - stackviz
