--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -53,10 +53,10 @@ diskimages:
 providers:
   - name: local_01
 #TODO: Update the provider username, password, and authurl
-    username: 'peregrine'
-    password: 'password'
-    auth-url: 'http://10.214.178.11:5000/v2.0'
-    project-name: 'CI'
+    username: peregrine
+    password: password
+    auth-url: http://10.214.178.11:5000/v2.0
+    project-name: admin
     max-servers: 3
     images:
       - name: dpc
