--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -81,8 +81,10 @@ diskimages:
         - nodepool-base
         - cache-devstack
         - initialize-urandom
+        - cache-bindep
         - growroot
-        - infra-package-needs
+       - infra-package-needs
+        - stackviz
       release: xenial
       env-vars:
         TMPDIR: /opt/dib_tmp
