--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -93,6 +93,8 @@ diskimages:
         DIB_APT_LOCAL_CACHE: '0'
         DIB_DISABLE_APT_CLEANUP: '1'
         DIB_GRUB_TIMEOUT: '0'
+        DIB_DISTRIBUTION_MIRROR: 'http://mirror.dfw.rax.openstack.org/ubuntu'
+        DIB_DEBOOTSTRAP_EXTRA_ARGS: '--no-check-gpg'
         DIB_DEBIAN_COMPONENTS: 'main,universe'
 providers:
   - name: local_01
