--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -74,15 +74,17 @@ labels:
 diskimages:
     - name: xenial
       elements:
-        - ubuntu-minimal
-        - vm
-        - simple-init
-        - openstack-repos
-        - nodepool-base
-        - cache-devstack
-        - initialize-urandom
-        - growroot
-        - infra-package-needs
+       - ubuntu-minimal
+       - vm
+       - simple-init
+       - openstack-repos
+       - nodepool-base
+       - cache-devstack
+       - initialize-urandom
+       - cache-bindep
+       - growroot
+       - infra-package-needs
+       - stackviz
       release: xenial
       env-vars:
         TMPDIR: /opt/dib_tmp
