--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -74,7 +74,7 @@ labels:
 diskimages:
     - name: xenial
       elements:
-       - ubuntu-minimal
+       - ubuntu
        - vm
        - simple-init
        - openstack-repos
